Sidenav animation with minor design changes

--- a/todoApp/src/main/webapp/app/homepage/navbar/navbar.template.html
+++ b/todoApp/src/main/webapp/app/homepage/navbar/navbar.template.html
@@ -1,6 +1,6 @@
 <md-toolbar layout="row" style="background-color:#f5b400" layout-align="start center">
     <div layout="row" flex="30" layout-align="start center">
-        <md-button class="menu" ng-click="ul.toggleList()" aria-label="Menu">
+        <md-button class="menu" ng-click="toggleNav()" aria-label="Menu">
             <i class="material-icons">menu</i>
         </md-button>
         <div layout="row" layout-align="start center">
