--- a/todoApp/src/main/webapp/app/homepage/noteslist/tabDialog.tmpl.html
+++ b/todoApp/src/main/webapp/app/homepage/noteslist/tabDialog.tmpl.html
@@ -63,7 +63,10 @@
               </md-button>
             </md-menu-item>
           </md-menu-content>
+
         </md-menu>
+
+        <md-button class="md-button done" ng-click="saveUpdatedNote(mdDialogData)" aria-label="Archive"> DONE </md-button>
 
       </md-card-actions>
 
