--- a/todoApp/src/main/webapp/app/homepage/sidenav/sidenav.template.html
+++ b/todoApp/src/main/webapp/app/homepage/sidenav/sidenav.template.html
@@ -1,9 +1,9 @@
-<md-sidenav md-is-locked-open="$mdMedia('gt-md')">
+<md-sidenav md-component-id="left" md-is-locked-open="toggle && $mdMedia('gt-md')">
     <md-list>
 
         <md-list-item>
             <md-button>
-                <i class="material-icons">lightbulb_outline</i> Notes </md-button>
+                <i class="material-icons">lightbulb_outline</i>Note </md-button>
         </md-list-item>
         <md-list-item>
             <md-button>
