--- a/todoApp/src/main/webapp/app/homepage/homepage.template.html
+++ b/todoApp/src/main/webapp/app/homepage/homepage.template.html
@@ -10,9 +10,14 @@
 		<md-content class="notespane" flex layout-padding="layout-padding" layout="column">
 
 
-			
-				<!-- Main Card -->
-				<maincard></maincard>			
+
+			<!-- Main Card -->
+			<div layout="row">
+
+				<div flex="20"></div>
+				<maincard flex="60"></maincard>
+				<div flex="20"></div>
+			</div>
 
 			<!-- <div ui-view="Pinned"></div> -->
 			<div layout="column" layout-align="start center" layout-wrap flex>
