Adding NoteDetails, NoteLoggingService, NotesLog and Operation class

--- a/todoApp/src/main/webapp/app/homepage/noteslist/noteslist.template.html
+++ b/todoApp/src/main/webapp/app/homepage/noteslist/noteslist.template.html
@@ -45,7 +45,7 @@
                     <i class="material-icons" ng-show="mouse">person_add</i>
                 </md-button>
 
-                <!-- <color-picker class="colorIcon mypalette" value="cardColor" color="color" options="colors" on-color-changed="colorChanged(newColor, oldColor,note)"></color-picker> -->
+                 <color-picker class="colorIcon mypalette" value="cardColor" color="color" options="colors" on-color-changed="colorChanged(newColor, oldColor,note)"></color-picker>
                 <md-button class="md-icon-button" aria-label="Image Upload" ng-click="openImageUploader(note)">
                     <i class="material-icons" ng-show="mouse">image</i>
                 </md-button>
