Added Rest Controller
GetAllNotes request

--- a/todoApp/src/main/webapp/app/admindashboard/admindashboard.template.html
+++ b/todoApp/src/main/webapp/app/admindashboard/admindashboard.template.html
@@ -1,5 +1,8 @@
 Below is canvas
 <div>
-    <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels">
+    <canvas id="pie" class="chart chart-pie" chart-data="data1" chart-labels="labels1" chart-options="options">
+    </canvas>
+
+    <canvas id="base" class="chart-horizontal-bar" chart-data="data2" chart-labels="labels2">
     </canvas>
 </div>
