--- a/todoApp/src/main/webapp/app/admindashboard/admindashboard.template.html
+++ b/todoApp/src/main/webapp/app/admindashboard/admindashboard.template.html
@@ -1,8 +1,13 @@
 Below is canvas
-<div>
-    <canvas id="pie" class="chart chart-pie" chart-data="data1" chart-labels="labels1" chart-options="options">
-    </canvas>
+<div layout="row" layout-align="center center" layout-padding>
 
-    <canvas id="base" class="chart-horizontal-bar" chart-data="data2" chart-labels="labels2">
-    </canvas>
+    <div flex="100">
+        <canvas id="bar" flex="100" class="chart chart-bar" chart-data="data2" chart-labels="labels2">
+        </canvas>
+    </div>
+
+    <div flex="100">
+        <canvas id="pie" class="chart chart-pie" chart-data="data1" chart-labels="labels1" chart-options="options">
+        </canvas>
+    </div>
 </div>
