--- a/todoApp/src/main/webapp/app/admindashboard/admindashboard.template.html
+++ b/todoApp/src/main/webapp/app/admindashboard/admindashboard.template.html
@@ -1,15 +1,13 @@
-<div layout="column" layout-align="center center" layout-padding>
+<div layout="row" layout-align="center center" layout-padding>
 
     <div flex="90">
-        <canvas id="bar" flex="100" class="chart chart-bar" chart-data="data2" chart-series="series2" chart-labels="labels2" chart-options="options">
+        <canvas id="bar" class="chart chart-bar" chart-data="data2" chart-series="series2" chart-labels="labels2" chart-options="options">
         </canvas>
     </div>
 
     <div flex="90">
-        <canvas id="pie" class="chart chart-pie" chart-data="data1" chart-labels="labels1" chart-options="options">
+        <canvas id="pie" class="chart chart-pie" chart-data="data" chart-labels="label" chart-options="options">
         </canvas>
     </div>
-
-    
 
 </div>
